Closed
Bug 1980143
Opened 21 days ago
Closed 20 days ago
Prevent generating backdrop pseudos for non-elements.
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
143 Branch
Tracking | Status | |
---|---|---|
firefox143 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
(Blocks 1 open bug)
Details
(Whiteboard: [viewtransitions:m2])
Attachments
(1 file)
Bug 1980143 - Prevent generating ::backdrop pseudo-elements for non-elements. r=keithamus,#style,#vt
48 bytes,
text/x-phabricator-request
|
Details | Review |
No description provided.
Assignee | ||
Comment 1•21 days ago
|
||
Bug 1954142 causes some crashes in view transition pseudo-elements.
These happen because we create the ::-moz-snapshot-containing-block
pseudo-element in the top layer, then try to create a ::backdrop for it.
With the patches for that bug, such a
::-moz-snapshot-containing-block::backdrop pseudo-element wouldn't match
regular ::backdrop rules (that's per spec), causing backdrop frame to
not be in the top layer itself.
We don't need to generate backdrop frames for view transitions, and we
don't put other pseudo-elements in the top layer, so this doesn't change
behavior, but fixes the crashes that prevent bug 1954142 from landing.
Pushed by ealvarez@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/ca50a88faeee
https://hg.mozilla.org/integration/autoland/rev/534e5fd7c312
Prevent generating ::backdrop pseudo-elements for non-elements. r=dshin
Comment 3•20 days ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 20 days ago
status-firefox143:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 143 Branch
Updated•20 days ago
|
Points: --- → 1
Whiteboard: [viewtransitions:m2]
You need to log in
before you can comment on or make changes to this bug.
Description
•