Bug 1980143 - Prevent generating ::backdrop pseudo-elements for non-elements. r=dshin

Bug 1954142 causes some crashes in view transition pseudo-elements.

These happen because we create the ::-moz-snapshot-containing-block
pseudo-element in the top layer, then try to create a ::backdrop for it.

With the patches for that bug, such a
::-moz-snapshot-containing-block::backdrop pseudo-element wouldn't match
regular ::backdrop rules (that's per spec), causing backdrop frame to
not be in the top layer itself.

We don't need to generate backdrop frames for view transitions, and we
don't put other pseudo-elements in the top layer, so this doesn't change
behavior, but fixes the crashes that prevent bug 1954142 from landing.

Differential Revision: https://phabricator.services.mozilla.com/D259240